--- a/src/main/resources/teampixl/com/pixlpos/fxml/loginconsole/LoginStage.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/loginconsole/LoginStage.fxml
@@ -2,88 +2,87 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<fx:root maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1280.0" stylesheets="@loginstage.css" type="BorderPane" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="teampixl.com.pixlpos.controllers.loginconsole.LoginScreenController">
-   <top>
-      <AnchorPane prefHeight="0.0" prefWidth="600.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER" />
-   </top>
-   <center>
-      <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER">
-         <AnchorPane prefHeight="3.0" prefWidth="247.0" style="-fx-background-color: white;" />
-         <HBox prefHeight="387.0" prefWidth="920.0">
-            <children>
-               <Region HBox.hgrow="ALWAYS" />
-               <VBox alignment="TOP_CENTER" prefHeight="387.0" prefWidth="480.0" styleClass="login-form_container">
-                  <children>
-                     <AnchorPane styleClass="login-title">
-                        <children>
-                           <Label alignment="CENTER" layoutX="42.0" layoutY="10.0" styleClass="login-header-label" text="Staff Portal Login" textAlignment="CENTER" textFill="WHITE" AnchorPane.leftAnchor="70.0" AnchorPane.rightAnchor="70.0">
-                              <font>
-                                 <Font size="20.0" />
-                              </font>
-                           </Label>
-                        </children>
-                        <VBox.margin>
-                           <Insets bottom="25.0" />
-                        </VBox.margin>
-                     </AnchorPane>
-                     <Label alignment="TOP_LEFT" styleClass="login-label" text="Staff Username" textOverrun="CLIP">
-                        <VBox.margin>
-                           <Insets left="10.0" />
-                        </VBox.margin>
-                     </Label>
-                     <TextField fx:id="usernameField" alignment="BOTTOM_CENTER" styleClass="login-form_container">
-                        <VBox.margin>
-                           <Insets left="10.0" right="10.0" />
-                        </VBox.margin>
-                     </TextField>
-                     <Label alignment="CENTER" styleClass="login-label" text="Password">
-                        <VBox.margin>
-                           <Insets left="10.0" />
-                        </VBox.margin>
-                     </Label>
-                     <PasswordField fx:id="passwordField" alignment="BOTTOM_CENTER" styleClass="text-field">
-                        <VBox.margin>
-                           <Insets left="10.0" right="10.0" />
-                        </VBox.margin>
-                     </PasswordField>
-                     <HBox alignment="CENTER" prefHeight="66.0" prefWidth="375.0" spacing="20.0">
-                        <children>
-                           <Button fx:id="exitButton" mnemonicParsing="false" onAction="#onExitButtonClick" prefHeight="30.0" prefWidth="70.0" text="Exit">
-                              <HBox.margin>
-                                 <Insets top="30.0" />
-                              </HBox.margin>
+<AnchorPane xmlns="http://javafx.com/javafx/17.0.2-ea"
+            xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="teampixl.com.pixlpos.controllers.loginconsole.LoginScreenController">
+
+   <!-- Main content wrapped in a BorderPane in the interest of simplicity. You should never need to access it -->
+   <children>
+      <BorderPane fx:id="mainBorderPane" AnchorPane.topAnchor="0" AnchorPane.bottomAnchor="0" AnchorPane.leftAnchor="0" AnchorPane.rightAnchor="0">
+         <!-- Left region with PIXL Services i.e. the left hand bar -->
+         <left>
+            <StackPane styleClass="header" BorderPane.alignment="CENTER">
+               <children>
+                  <Label styleClass="header-label" text="PIXL Services" />
+               </children>
+            </StackPane>
+         </left>
+
+         <!-- Central region login-form containing main bulk of fx -->
+         <center>
+            <StackPane BorderPane.alignment="CENTER">
+               <children>
+                  <!-- Login form container centered vertically and horizontally in order to apply active scaling -->
+                  <VBox alignment="CENTER" styleClass="login-form_container" maxWidth="400.0" maxHeight="600.0">
+                     <children>
+                        <!-- Login Title -->
+                        <Label styleClass="login-header-label" text="Staff Portal Login" textAlignment="CENTER">
+                           <font>
+                              <Font size="24.0" />
+                           </font>
+                        </Label>
+                        <!-- Username Label and Field -->
+                        <Label styleClass="login-label" text="Staff Username" alignment="CENTER_LEFT" />
+                        <TextField fx:id="usernameField" styleClass="text-field" />
+                        <!-- Password Label -->
+                        <Label styleClass="login-label" text="Password" alignment="CENTER_LEFT" />
+                        <!-- Password Field and Eye Button -->
+                        <!-- StackPane to store overlapping features i.e. eye-button -->
+                        <StackPane>
+                           <PasswordField fx:id="passwordField" styleClass="text-field" />
+                           <TextField fx:id="passwordVisibleField" styleClass="text-field" visible="false" managed="false" />
+                           <Button fx:id="eyeButton" styleClass="eye-button" onAction="#togglePasswordVisibility" focusTraversable="false"
+                                   maxWidth="20" maxHeight="20" prefWidth="20" prefHeight="20" opacity="0.7" StackPane.alignment="CENTER_RIGHT">
+                              <graphic>
+                                 <ImageView fx:id="eyeIcon" fitWidth="20" fitHeight="20">
+                                    <Image url="@icons/EYE_CLOSED_ICON.png" />
+                                 </ImageView>
+                              </graphic>
+                              <StackPane.margin>
+                                 <!-- Margins to change the location insert of the eye button -->
+                                 <Insets right="15.0" />
+                              </StackPane.margin>
                            </Button>
-                           <Button fx:id="loginButton" mnemonicParsing="false" onAction="#onLoginButtonClick" prefHeight="30.0" prefWidth="70.0" text="Login">
-                              <HBox.margin>
-                                 <Insets top="30.0" />
-                              </HBox.margin>
-                           </Button>
-                        </children>
-                        <padding>
-                           <Insets left="10.0" right="10.0" />
-                        </padding>
-                     </HBox>
-                  </children>
-               </VBox>
-               <Region HBox.hgrow="ALWAYS" />
-            </children>
-         </HBox>
-      </VBox>
-   </center>
-   <left>
-      <AnchorPane prefHeight="720.0" prefWidth="499.0" styleClass="header" BorderPane.alignment="CENTER">
-         <children>
-            <Label layoutX="150.0" layoutY="342.0" styleClass="header-label" text="PIXL Services" />
-         </children>
-      </AnchorPane>
-   </left>
-   <right>
-      <AnchorPane prefHeight="400.0" prefWidth="0.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER" />
-   </right>
-   <bottom>
-      <AnchorPane prefHeight="0.0" prefWidth="600.0" style="-fx-background-color: white;" BorderPane.alignment="CENTER" />
-   </bottom>
-</fx:root>
+                        </StackPane>
+                        <!-- Buttons for Exit and Login -->
+                        <HBox alignment="CENTER" spacing="20">
+                           <Button fx:id="exitButton" onAction="#onExitButtonClick" text="Exit" styleClass="form-button" />
+                           <Button fx:id="loginButton" onAction="#onLoginButtonClick" text="Login" styleClass="form-button" />
+                        </HBox>
+                     </children>
+                     <padding>
+                        <Insets top="20" bottom="20" left="20" right="20" />
+                     </padding>
+                     <spacing>20</spacing>
+                  </VBox>
+               </children>
+            </StackPane>
+         </center>
+      </BorderPane>
+
+      <!-- Theme toggle button anchored to the top right corner (Good idea for all scenes maybe?)-->
+      <Button fx:id="themeToggleButton" onAction="#toggleDarkMode" styleClass="theme-toggle-button"
+              AnchorPane.topAnchor="10" AnchorPane.rightAnchor="10">
+         <graphic>
+            <ImageView fx:id="themeToggleIcon">
+               <Image url="@icons/TOGGLE_OFF.png" />
+            </ImageView>
+         </graphic>
+      </Button>
+   </children>
+</AnchorPane>
