--- a/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/waiterstage.css
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/waiterconsole/waiterstage.css
@@ -6,8 +6,8 @@
 /* TopBar styling */
 .header-container {
     -fx-background-color: white;
-    -fx-padding: 7px;
     -fx-border-radius: 10px;
+    -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 10, 0, 0, 2);
 }
 
 .header-line {
@@ -101,20 +101,21 @@
 .correct-buttons, .void-button, .apply-note-button {
     -fx-background-color: #c1c1c1;
     -fx-text-fill: #4a4a4a;
-    -fx-font-size: 13px;
+    -fx-font-size: 15px;
     -fx-padding: 8px 25px;
     -fx-cursor: hand;
     -fx-border-radius: 10px;
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 10, 0, 0, 2);
 }
 
+.correct-buttons:hover, .void-button:hover, .apply-note-button:hover {
+    -fx-background-color: #979797;
+}
+
 .send-button {
     -fx-background-color: #7f9e76;
     -fx-text-fill: white;
     -fx-font-size: 15px;
-    -fx-pref-width: 80;
-    -fx-pref-height: 70;
-    -fx-padding: 20px 20px;
     -fx-cursor: hand;
     -fx-border-radius: 10px;
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 10, 0, 0, 2);
@@ -127,7 +128,7 @@
 .restart-button {
     -fx-background-color: #b35465;
     -fx-text-fill: white;
-    -fx-font-size: 13px;
+    -fx-font-size: 15px;
     -fx-cursor: hand;
     -fx-border-radius: 10px;
     -fx-effect: dropshadow(gaussian, rgba(0, 0, 0, 0.2), 10, 0, 0, 2);
