--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Users/adminusers.css
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Users/adminusers.css
@@ -38,6 +38,9 @@
     -fx-text-fill: white;
 }
 
+.user-button {
+    -fx-text-fill: #0000ff;
+}
 .logout-button {
     -fx-background-color: white;
     -fx-text-fill: #4a4a4a;
