--- a/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Users/AdminUsers.fxml
+++ b/src/main/resources/teampixl/com/pixlpos/fxml/adminconsole/Users/AdminUsers.fxml
@@ -3,8 +3,10 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -161,7 +163,7 @@
          <children>
                 <VBox prefHeight="654.4" prefWidth="600.0" style="-fx-background-color: white; -fx-background-radius: 20;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                <children>
-                  <Label text="Title">
+                  <Label text="User Database">
                      <font>
                         <Font size="24.0" />
                      </font>
@@ -258,17 +260,17 @@
                     <bottom>
                         <HBox alignment="CENTER" prefHeight="75.0" prefWidth="200.0" spacing="30.0" BorderPane.alignment="CENTER">
                             <children>
-                                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="Button" />
-                                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="Button" />
+                                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="Edit User" />
+                                <Button mnemonicParsing="false" prefHeight="40.0" prefWidth="150.0" text="Remove User" />
                             </children>
                         </HBox>
                     </bottom>
                <center>
                   <BorderPane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: white; -fx-background-radius: 20;" BorderPane.alignment="CENTER">
                      <center>
-                              <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
+                              <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" BorderPane.alignment="CENTER">
                            <children>
-                              <Label text="Title">
+                              <Label text="User Infomation">
                                  <padding>
                                     <Insets left="20.0" top="20.0" />
                                  </padding>
@@ -277,6 +279,12 @@
                                  </font>
                               </Label>
                               <HBox prefHeight="0.0" prefWidth="0.0" style="-fx-border-color: #4a85f6;" />
+                              <TextField prefHeight="30.0" promptText="Firstname *" />
+                              <TextField layoutX="20.0" layoutY="98.0" prefHeight="30.0" promptText="Lastname*" />
+                              <TextField layoutX="20.0" layoutY="139.0" prefHeight="30.0" promptText="Email*" />
+                              <PasswordField prefHeight="30.0" promptText="Password*" />
+                              <Label text="Selected Role" />
+                              <ChoiceBox prefWidth="150.0" />
                            </children>
                            <padding>
                               <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -286,7 +294,9 @@
                      <bottom>
                         <ButtonBar prefHeight="40.0" prefWidth="200.0" BorderPane.alignment="CENTER">
                           <buttons>
-                            <Button mnemonicParsing="false" text="Button" />
+                            <Button mnemonicParsing="false" text="Submit" />
+                              <Button layoutX="244.0" layoutY="15.0" mnemonicParsing="false" text="Add User +" />
+                              <Button layoutX="148.0" layoutY="15.0" mnemonicParsing="false" text="Cancel" />
                           </buttons>
                            <opaqueInsets>
                               <Insets />
